--- a/templates/base.html
+++ b/templates/base.html
@@ -96,9 +96,9 @@
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Follow us on social media</h5>
           <ul>
-            <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon" href="https://www.facebook.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-facebook-f"></i></a></li><br>
-            <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon" href="https://www.twitter.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-twitter"></i></a></li><br>
-            <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon" href="https://www.instagram.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-instagram"></i></a></li><br>
+            <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon-1" href="https://www.facebook.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon-2" href="https://www.twitter.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-twitter"></i></a></li>
+            <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon-3" href="https://www.instagram.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-instagram"></i></a></li>
           
           </ul>
         </div>
