added comments to  html files

--- a/templates/add_trail.html
+++ b/templates/add_trail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+<!--   Code adopted from Code Institute Data centric Design mini project. Materialise farmework used for the layout of this page   -->
     <h3 class="brown-text text-darken-4 center-align">Add Trail</h3>
 
     <div class="row card-panel grey lighten-5">
@@ -55,8 +55,7 @@
                             <label for="trail_directions">Trail Directions</label>
                     </div>
             </div>
-        
-    
+
          <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
