--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,8 @@
 
     {% block styles %}
     {% endblock %}
+
+    <!--   Code inspired by Code Institute Data centric Design mini project.  -->
     <title>TrailMixers</title>
 </head>
 <body>
