--- a/templates/edit_trail.html
+++ b/templates/edit_trail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+ <!--   Code credit to Code Institute Data centric Design mini project. Manipulated to suit my project -->
+
     <h3 class="light-blue-text text-darken-4 center-align">Edit Trail</h3>
 
     <div class="row card-panel grey lighten-5">
