--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+ <!--   Code credit to Code Institute Data centric Design mini project. Manipulated to suit my project -->
 <h3 class = "center-align">Log In</h3>
 <div class="row">
     <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
