--- a/templates/trails.html
+++ b/templates/trails.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<!--   Code credit to Code Institute Data centric Design mini project, collapsible accordian section. Manipulated to suit my project -->
 
 <h3 class="center-align brown-text">
     All Trails
