--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+ <!--   Code credit to Code Institute Data centric Design mini project. Manipulated to suit my project -->
+  <!--   Materialise framework used for layout-->
 <h3 class = "center-align">Register</h3>
 <div class="row">
     <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
