ammended css file to pass validator

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     {% block styles %}
     {% endblock %}
 
-    <!--   Code inspired by Code Institute Data centric Design mini project.  -->
+    <!--   Code credit to Code Institute Data centric Design mini project. Manipulated to suit my project -->
     <title>TrailMixers</title>
 </head>
 <body>
@@ -83,7 +83,7 @@
        {% block content %}
        {% endblock %}
   </main>
-
+<!-- footer -->
   <footer class="page-footer">
     <div class="container">
       <div class="row">
