--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@ body {
     font-size: 2em;
 }
 .text-shadow {
-    text-shadow: 1px 1px 1px rgb(0, 0, 0.5);
+    text-shadow: 1px 1px 1px rgb(0, 0, 0.5px);
 }
 
 #tag-line{
