--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
         <nav class="nav-extended text-shadow  teal darken-3">
             <div class="nav-wrapper">
                 <a href="{{ url_for('index') }}" class="brand-logo">TrailMixer <i class="fab fa-pagelines right"></i></a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+                <a href="" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
             
                 {% if session.user %}
