fixed type in edit_trail on calss=validate

--- a/templates/edit_trail.html
+++ b/templates/edit_trail.html
@@ -21,7 +21,7 @@
                 <div class="input-field col s12">
                     <i class="prefix light-blue-text text-darken-4"></i>
                     <textarea id="trail_address"  name="trail_address" minlength="5" maxlength="50"
-                    type="text" class="validate required">
+                    type="text" class="validate" required>
                     {{- trail.trail_address -}}
                     </textarea>
                     <label for="trail_address">Address</label>
