--- a/templates/edit_trail.html
+++ b/templates/edit_trail.html
@@ -63,7 +63,6 @@
                     </div>
             </div>
         
-    
          <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
@@ -72,7 +71,7 @@
                         Cancel <i class="fas fa-times-circle right"></i>
                     </a>
                     <button type="submit" class="btn-large teal darken-3 text-shadow">
-                        Edit Trail <i class="fab fa-pagelines right right"></i>
+                        Edit Trail <i class="fab fa-pagelines right"></i>
                     </button>
                 </div>
             </div>
